--- a/src/output.css
+++ b/src/output.css
@@ -15,6 +15,8 @@
     --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-amber-500: oklch(76.9% 0.188 70.08);
     --color-sky-100: oklch(95.1% 0.026 236.824);
+    --color-blue-700: oklch(48.8% 0.243 264.376);
+    --color-indigo-500: oklch(58.5% 0.233 277.117);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-black: #000;
     --color-white: #fff;
@@ -812,6 +814,16 @@
     --tw-shadow: 0 1px var(--tw-shadow-color, rgb(0 0 0 / 0.05));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .inset-shadow-sm {
+    --tw-inset-shadow: inset 0 2px 4px var(--tw-inset-shadow-color, rgb(0 0 0 / 0.05));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .inset-shadow-black {
+    --tw-inset-shadow-color: #000;
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-inset-shadow-color: color-mix(in oklab, var(--color-black) var(--tw-inset-shadow-alpha), transparent);
+    }
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -889,10 +901,84 @@
       }
     }
   }
+  .focus\:border-2 {
+    &:focus {
+      border-style: var(--tw-border-style);
+      border-width: 2px;
+    }
+  }
   .focus\:border-4 {
     &:focus {
       border-style: var(--tw-border-style);
       border-width: 4px;
+    }
+  }
+  .focus\:inset-shadow-2xs {
+    &:focus {
+      --tw-inset-shadow: inset 0 1px var(--tw-inset-shadow-color, rgb(0 0 0 / 0.05));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .focus\:inset-shadow-sm {
+    &:focus {
+      --tw-inset-shadow: inset 0 2px 4px var(--tw-inset-shadow-color, rgb(0 0 0 / 0.05));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .focus\:inset-shadow-black {
+    &:focus {
+      --tw-inset-shadow-color: #000;
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, var(--color-black) var(--tw-inset-shadow-alpha), transparent);
+      }
+    }
+  }
+  .focus\:inset-shadow-blue-700 {
+    &:focus {
+      --tw-inset-shadow-color: oklch(48.8% 0.243 264.376);
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, var(--color-blue-700) var(--tw-inset-shadow-alpha), transparent);
+      }
+    }
+  }
+  .focus\:inset-shadow-indigo-500 {
+    &:focus {
+      --tw-inset-shadow-color: oklch(58.5% 0.233 277.117);
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, var(--color-indigo-500) var(--tw-inset-shadow-alpha), transparent);
+      }
+    }
+  }
+  .focus\:inset-shadow-white {
+    &:focus {
+      --tw-inset-shadow-color: #fff;
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, var(--color-white) var(--tw-inset-shadow-alpha), transparent);
+      }
+    }
+  }
+  .focus\:inset-shadow-white\/5 {
+    &:focus {
+      --tw-inset-shadow-color: color-mix(in srgb, #fff 5%, transparent);
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-white) 5%, transparent) var(--tw-inset-shadow-alpha), transparent);
+      }
+    }
+  }
+  .focus\:inset-shadow-white\/65 {
+    &:focus {
+      --tw-inset-shadow-color: color-mix(in srgb, #fff 65%, transparent);
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-white) 65%, transparent) var(--tw-inset-shadow-alpha), transparent);
+      }
+    }
+  }
+  .focus\:inset-shadow-white\/500 {
+    &:focus {
+      --tw-inset-shadow-color: color-mix(in srgb, #fff 500%, transparent);
+      @supports (color: color-mix(in lab, red, red)) {
+        --tw-inset-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-white) 500%, transparent) var(--tw-inset-shadow-alpha), transparent);
+      }
     }
   }
   .md\:flex {
